--- a/notebooks/extract_notebook.ipynb
+++ b/notebooks/extract_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,11 +433,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ba7371d0eafdb20a92c6fc0f12a5e68fc4371092dc8dceea42e3c6417162681e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -451,9 +448,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "da794214905de4641d7a7975bb820e756fef4f35ff16f1c6559aa119f9def536"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
